--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django==1.9
-django-extensions==1.5.9
-gunicorn==20.0.4
-psycopg2==2.7.3.1
-dj-database-url==0.4.0
-whitenoise==2.0.6
+Django
+django-extensions
+gunicorn
+psycopg2
+dj-database-url
+whitenoise
 django-heroku
